--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 19:05:03 2018</p>
+         Last Run: Wed Jul 25 20:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>15</td>
-                        <td>50</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>62</td>
-                     </tr>
-                     <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>15</td>
-                        <td>56</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>65</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>18</td>
-                        <td>69</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>SE</td>
+                        <td>15</td>
                         <td>71</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>ESE</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM",
              "10:00 PM"
            ],
@@ -106,8 +93,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
-                 "19",
+                 "18",
                  "16"
                ]
              },
@@ -117,8 +103,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
-                 "19",
+                 "18",
                  "16"
                ]
              }
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM",
              "10:00 PM"
            ],
@@ -171,8 +155,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "15",
-                 "15",
-                 "18"
+                 "15"
                ]
              },
              {
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "56",
-                 "69"
+                 "59",
+                 "71"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "65",
-                 "71"
+                 "69",
+                 "68"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 19:05:03 2018</p>
+         Last Run: Wed Jul 25 20:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -235,47 +216,47 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>12</td>
+                        <td>8</td>
+                        <td>NNW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>39</td>
                         <td>5</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
-                        <td>35</td>
+                        <td>1</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>16</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
-                        <td>33</td>
+                        <td>1</td>
+                        <td>34</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -283,11 +264,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>13</td>
-                        <td>N</td>
                         <td>11</td>
+                        <td>NNE</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -334,7 +315,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
                  "24"
@@ -347,7 +328,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
                  "24"
@@ -405,8 +386,8 @@
                "data":[
                  "0",
                  "0",
-                 "0",
-                 "0",
+                 "1",
+                 "1",
                  "0"
                ]
              },
@@ -415,11 +396,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
+                 "45",
                  "39",
-                 "35",
-                 "33",
-                 "32"
+                 "36",
+                 "34",
+                 "33"
                ]
              },
              {
@@ -427,11 +408,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "17",
-                 "16",
                  "13",
-                 "11"
+                 "18",
+                 "18",
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -448,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 19:05:03 2018</p>
+         Last Run: Wed Jul 25 20:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -472,8 +453,8 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>19</td>
-                        <td>42</td>
+                        <td>15</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NE</td>
@@ -484,36 +465,36 @@
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>21</td>
-                        <td>46</td>
+                        <td>17</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>22</td>
+                        <td>18</td>
                         <td>52</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>55</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>44</td>
-                        <td>59</td>
+                        <td>42</td>
+                        <td>60</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>NNE</td>
-                        <td>58</td>
+                        <td>16</td>
+                        <td>N</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -625,10 +606,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "21",
-                 "22",
-                 "44"
+                 "15",
+                 "17",
+                 "18",
+                 "42"
                ]
              },
              {
@@ -636,10 +617,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "46",
+                 "43",
+                 "47",
                  "52",
-                 "59"
+                 "60"
                ]
              },
              {
@@ -648,9 +629,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "55",
-                 "59",
-                 "55",
-                 "58"
+                 "58",
+                 "53",
+                 "56"
                ]
              }
            ]
