--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 23:05:03 2018</p>
+         Last Run: Thu Jul 26 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -43,13 +43,13 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>3</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>2</td>
                         <td>39</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>18</td>
                      </tr>
                      <tr>
@@ -58,11 +58,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>4</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>24</td>
                         <td>24</td>
                         <td>4</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>3</td>
-                        <td>31</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>4</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>NNE</td>
-                        <td>14</td>
+                        <td>NE</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,10 +133,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -146,10 +146,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -203,10 +203,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "3",
+                 "2",
                  "4",
                  "4",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -216,9 +216,9 @@
                "data":[
                  "44",
                  "39",
-                 "34",
-                 "32",
-                 "31"
+                 "35",
+                 "33",
+                 "32"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "12",
                  "18",
-                 "17",
-                 "15",
-                 "14"
+                 "16",
+                 "16",
+                 "17"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 23:05:03 2018</p>
+         Last Run: Thu Jul 26 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -284,11 +284,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>17</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -307,7 +307,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>60</td>
                         <td>0</td>
                         <td>16</td>
@@ -427,7 +427,7 @@
                  "15",
                  "17",
                  "18",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -436,7 +436,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "43",
-                 "46",
+                 "47",
                  "52",
                  "60"
                ]
@@ -447,7 +447,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "55",
-                 "59",
+                 "58",
                  "53",
                  "56"
                ]
