--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 00:05:03 2018</p>
+         Last Run: Thu Jul 26 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,59 +34,59 @@
                         <td>21</td>
                         <td>21</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>12</td>
+                        <td>NNW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>2</td>
-                        <td>39</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>3</td>
+                        <td>38</td>
                         <td>5</td>
-                        <td>8</td>
-                        <td>ENE</td>
+                        <td>6</td>
+                        <td>NNE</td>
                         <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
-                        <td>35</td>
+                        <td>15</td>
+                        <td>34</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>16</td>
+                        <td>NE</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
-                        <td>33</td>
+                        <td>15</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>16</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>15</td>
                         <td>32</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>17</td>
+                        <td>NNE</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "22",
+                 "23",
                  "24",
                  "24",
                  "24"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "22",
+                 "23",
                  "24",
                  "24",
                  "24"
@@ -203,10 +203,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "2",
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "15",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "39",
-                 "35",
-                 "33",
+                 "43",
+                 "38",
+                 "34",
+                 "32",
                  "32"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "11",
                  "18",
-                 "16",
-                 "16",
-                 "17"
+                 "33",
+                 "33",
+                 "33"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 00:05:03 2018</p>
+         Last Run: Thu Jul 26 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,50 +268,50 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
+                        <td>38</td>
                         <td>43</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NE</td>
-                        <td>55</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>17</td>
+                        <td>40</td>
                         <td>47</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>18</td>
+                        <td>41</td>
                         <td>52</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>43</td>
+                        <td>47</td>
                         <td>60</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>56</td>
                      </tr>
                   </tbody>
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "17",
-                 "18",
-                 "43"
+                 "38",
+                 "40",
+                 "41",
+                 "47"
                ]
              },
              {
@@ -446,9 +446,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "58",
-                 "53",
+                 "50",
+                 "50",
+                 "52",
                  "56"
                ]
              }
