--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 03:05:23 2018</p>
+         Last Run: Thu Jul 26 04:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>1</td>
+                        <td>4</td>
                         <td>44</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>12</td>
+                        <td>N</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>0</td>
-                        <td>38</td>
+                        <td>4</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>30</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,8 +202,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "0",
+                 "4",
+                 "4",
                  "15",
                  "15",
                  "15"
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "38",
+                 "39",
                  "35",
-                 "32",
-                 "31"
+                 "33",
+                 "32"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "13",
                  "19",
+                 "34",
                  "32",
-                 "30",
-                 "30"
+                 "31"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 03:05:23 2018</p>
+         Last Run: Thu Jul 26 04:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
